--- a/招生信息/复旦大学-姜育刚老师.md
+++ b/招生信息/复旦大学-姜育刚老师.md
@@ -27,3 +27,7 @@ https://fvl.fudan.edu.cn/research/trustworthyml/list.htm
 ## 实验室官网
 
 https://fvl.fudan.edu.cn/
+
+## 广告提供者
+
+该广告由 2113147687@qq.com 发起。
