--- a/招生信息/四川大学华西医院-李康老师.md
+++ b/招生信息/四川大学华西医院-李康老师.md
@@ -49,7 +49,7 @@
 学院|招生专业1|招生专业2|招生专业3
 :----|:----|:----|:----
 华西临床医学院|人工智能|医学信息学|医学工程技术
-电气工程学院|人工智能|电子信息|控制科学与技术
+电气工程学院|控制科学与工程|人工智能|电子信息
 机械工程学院|机械工程|电子信息|
 
 ### 2）其他院校
