--- a/招生信息/浙江大学-李明老师.md
+++ b/招生信息/浙江大学-李明老师.md
@@ -7,3 +7,7 @@
 ## 导师介绍
 
 李明老师，应用数学博士，浙江大学计算机学院/CAD&CG 国家重点实验室副教授、博导，智能设计实验室主任，杭州市全球引才计划特聘专家，个人主页：http://www.cad.zju.edu.cn/home/liming/。5年英国、美国研究经历。目前担任中国数学会计算机数学学会专业委员会委员、中国计算机学会计算机辅助设计与图形学专业委员会委员、中国工业技术软件化产业联盟CAD软件行业专业委员会委员，第22届中国计算机辅助设计与图形学大会程序委员会共同主席(2019)、国际CAD顶级大会ACM SPM 2020、ACM Web3D 2020等程序委员会委员。研究方向主要为物理仿真、CAD&CAE一体化、数字材料、深度学习等。
+
+## 广告提供者
+
+本广告由 2051766033@qq.com 提供。
