Update and rename 北京邮电大学-计算机视觉-直博-李学明老师.md to 北京邮电大学-计算机视觉-李学明老师.md

--- a/招生信息/北京邮电大学-计算机视觉-李学明老师.md
+++ b/招生信息/北京邮电大学-计算机视觉-李学明老师.md
@@ -7,7 +7,7 @@
 ## 招募要求
 
 <b>直博</b>（招生专业：0810J1人工智能，人工智能学院），专业均隶属北邮“信息与通信工程”一流学科。招收博士生2-3名。鼓励研究生按时开题、按期毕业。招收计算机、数字媒体技术、电子信息等相关专业直博/硕士，欢迎有较强动手能力、上进心和积极心态的学生攻读硕博士。
-<b>联系邮箱:zhangyuereal@163.com</b>
+<b>联系邮箱:zhangyuereal@163.com</b>来信请附 简历+成绩单
 
 ## 广告提供者
 
