--- a/招生信息/华中科技大学-万瑶老师.md
+++ b/招生信息/华中科技大学-万瑶老师.md
@@ -10,3 +10,8 @@
 - 国内985/211高校优先
 
 欢迎有兴趣的同学邮件联系（wanyao@hust.edu.cn），请附上你的个人简历。我们可以约时间一起聊聊：）
+
+### 广告提供者
+联系方式：
+邮箱：1169404616@qq.com
+QQ：1169404616
