--- a/招生信息/上海交通大学-语音-海外优青陈谐老师.md
+++ b/招生信息/上海交通大学-语音-海外优青陈谐老师.md
@@ -10,7 +10,7 @@ https://mp.weixin.qq.com/s/UlAZ9XHdBI1_axBlYduLtg
 
 ## 导师介绍
 
-陈谐博士于2016年在剑桥大学获得博士学位，此后在剑桥大学做博士后研究员。2018年加入美国微软（西雅图）担任高级研究员、资深研究员。2021年9月加入上海交通大学跨媒体语言智能实验室，担任副教授。陈谐博士的主要研究方向是语音识别、自然语音处理、自监督语音模型、多模态。陈谐博士注重学生个性化培养，平时也会 hands-on 与学生一起写代码、推公式。与工业界合作紧密，会推荐学生去 MSRA、腾讯、小米首席科学家 Kaldi 之父[Dan Povey](https://scholar.google.com/citations?user=y_-5FWAAAAAJ&hl=zh-CN)团队等地方实习。
+[陈谐](https://scholar.google.com.hk/citations?hl=zh-CN&user=d6u01FkAAAAJ)博士于2016年在剑桥大学获得博士学位，此后在剑桥大学做博士后研究员。2018年加入美国微软（西雅图）担任高级研究员、资深研究员。2021年9月加入上海交通大学跨媒体语言智能实验室，担任副教授。陈谐博士的主要研究方向是语音识别、自然语音处理、自监督语音模型、多模态。陈谐博士注重学生个性化培养，平时也会 hands-on 与学生一起写代码、推公式。与工业界合作紧密，会推荐学生去 MSRA、腾讯、小米首席科学家 Kaldi 之父 [Dan Povey](https://scholar.google.com/citations?user=y_-5FWAAAAAJ&hl=zh-CN)团队等地方实习。
 
 ## 基本要求
 
