--- a/招生信息/上海交通大学-语音-海外优青陈谐老师.md
+++ b/招生信息/上海交通大学-语音-海外优青陈谐老师.md
@@ -18,7 +18,7 @@ https://mp.weixin.qq.com/s/UlAZ9XHdBI1_axBlYduLtg
 2. 具有扎实的数学、编程和英语基础；
 3. 自驱力、探索欲、表达能力强，有团队合作精神。
 
-## 联系邮箱
+## 联系方式
 
 请发送简历、成绩单、联系方式等材料至maziyang99@163.com
 
