--- a/招生信息/上海交通大学-安泰-王凯老师.md
+++ b/招生信息/上海交通大学-安泰-王凯老师.md
@@ -1,8 +1,5 @@
-王凯
-上海交通大学安泰经济与管理学院数据与商务智能系助理教授
-2022年获国家级高层次青年人才
-
-主要研究方向：图数据的管理与分析，特别是针对大规模、复杂图数据的高效图算法的设计，应用于社交网络、公共安全、电子商务及智慧城市等重要领域
+# 教师介绍
+[王凯](https://www.acem.sjtu.edu.cn/faculty/wangkai.html)，上海交通大学安泰经济与管理学院数据与商务智能系助理教授，2022年获国家级高层次青年人才
 
 近年来
 - 于SIGMOD、VLDB、ICDE、VLDBJ、TKDE等数据库/数据管理领域国际顶级会议和期刊已发表/录用学术论文共计27篇，其中中国计算机学会（CCF）推荐A类国际学术会议和期刊论文20篇（第一作者11篇，通讯作者4篇，其他作者5篇）
@@ -12,10 +9,19 @@
 - 出任VLDB 2024、VLDB 2023、KDD2023、ICDE 2022、WSDM 2022等国际学术会议程序委员会委员和TKDE、VLDBJ等国际期刊评审专家，曾担任VLDB 2022网站主席，并由于在会议组织过程中的出色工作获得“VLDB 2022 Service Award”
 - 2023年起，作为负责人与阿里巴巴达摩院合作“基于城市管理大数据的智慧城市关键技术研究”项目
 
-个人网站： https://www.acem.sjtu.edu.cn/faculty/wangkai.html 
+# 研究方向
+图数据的管理与分析，特别是针对大规模、复杂图数据的高效图算法的设计，应用于社交网络、公共安全、电子商务及智慧城市等重要领域
 
-计划保研的学生：
-诚招有志于面向商务智能大数据分析、金融计算机交叉方向的同学
-面向对象：当前大三，希望你有较好的数理与编程基础（特别欢迎计算机、数学、金融背景的同学）。经费特别充足，课题选择自由，可针对个人未来职业规划个性化定制培养方案
+# 招生要求
+1.当前大三，计划保研的学生
+2.有志于面向商务智能大数据分析、金融计算机交叉方向的同学
+3.有较好的数理与编程基础（特别欢迎计算机、数学、金融背景的同学）
+4.经费特别充足，课题选择自由，可针对个人未来职业规划个性化定制培养方案
 
-欢迎联系 w.kai@sjtu.edu.cn
+# 报名流程
+请将个人简历等发送到邮箱 w.kai@sjtu.edu.cn
+
+# 广告提供者
+
+该广告由[Tachi](375605069@qq.com) 提供
+
