--- a/招生信息/上海交通大学-安泰-王凯老师.md
+++ b/招生信息/上海交通大学-安泰-王凯老师.md
@@ -22,7 +22,9 @@
 4.经费特别充足，课题选择自由，可针对个人未来职业规划个性化定制培养方案
 
 # 报名流程
-请将个人简历等发送到邮箱 w.kai@sjtu.edu.cn
+1. 请将个人简历等发送到邮箱 w.kai@sjtu.edu.cn
+
+2. 请查看上海交通大学安泰经济与管理学院夏令营信息，具体详情请关注[链接](https://www.acem.sjtu.edu.cn/notices/75833.html)
 
 # 广告提供者
 
