增加曾荣飞推荐

--- a/招生信息/东北大学-软件学院-曾荣飞.md
+++ b/招生信息/东北大学-软件学院-曾荣飞.md
@@ -14,7 +14,7 @@
 
 (6) 跟香港科大, 香港浸会大学, 加拿大多伦多大学都保持紧密合作. 具体信息看看个人主页吧, 否则有借人吹自己的嫌疑.
 
-## "招亲帖"
+## 招亲帖
 
 招学生就像找对象. 即使再优秀, 两个人得合拍. 你看我都已经这样了, 对学生要求也就别高了. 
 
