--- a/招生信息/西湖大学-人工智能与计算生物学课题组-曾坚阳老师.md
+++ b/招生信息/西湖大学-人工智能与计算生物学课题组-曾坚阳老师.md
@@ -6,7 +6,7 @@
 
 ## 一．课题组介绍
 
-课题组负责人：曾坚阳教授（主页：[https://www.westlake.edu.cn/faculty/jianyang-zeng.html](https://www.westlake.edu.cn/faculty/jianyang-zeng.html)）是中组部海外青年人才计划和**国家杰出青年科学基金入选者**，于2012年12月至2023年7月在**清华大学交叉信息研究院（姚班）担任助理教授、长聘制终身副教授，于2023年7月起作为终身正教授加入西湖大学工学院（生命科学学院兼聘）**。他于1999年和2002年分别获得浙江大学的学士和硕士学位。2011年，在美国杜克大学(Duke University)获得计算机科学博士学位。2011年至2012年期间，在杜克大学计算机科学系和杜克医学院从事博士后研究。共发表学术论文80余篇，其中通讯作者论文包括 Nature Machine Intelligence、Nature Communications、 Nature Computational Science、PNAS、Cell Systems、Nucleic Acids Research、 STTT、Protein & Cell、PLOS Computational Biology、Bioinformatics等。成果获得ESI高引论文、“吴文俊人工智能自然科学”三等奖、“中国生物信息学十大进展”、 “中国生物信息学十大算法和工具”、世界人工智能大会青年优秀论文、国际会议ICIBM 2019最佳论文等荣誉。担任国际期刊IEEE/ACM Transactions on Computational Biology and Bioinformatics的编委、计算生物学领域的国际顶级会议ISMB、RECOMB程序委员会委员。
+课题组负责人：曾坚阳教授（主页：[https://www.westlake.edu.cn/faculty/jianyang-zeng.html](https://www.westlake.edu.cn/faculty/jianyang-zeng.html)）是**国家杰出青年科学基金入选者**，于2012年12月至2023年7月在**清华大学交叉信息研究院（姚班）担任助理教授、长聘制终身副教授，于2023年7月起作为终身正教授加入西湖大学工学院（生命科学学院兼聘）**。他于1999年和2002年分别获得浙江大学的学士和硕士学位。2011年，在美国杜克大学(Duke University)获得计算机科学博士学位。2011年至2012年期间，在杜克大学计算机科学系和杜克医学院从事博士后研究。共发表学术论文80余篇，其中通讯作者论文包括 Nature Machine Intelligence、Nature Communications、 Nature Computational Science、PNAS、Cell Systems、Nucleic Acids Research、 STTT、Protein & Cell、PLOS Computational Biology、Bioinformatics等。成果获得ESI高引论文、“吴文俊人工智能自然科学”三等奖、“中国生物信息学十大进展”、 “中国生物信息学十大算法和工具”、世界人工智能大会青年优秀论文、国际会议ICIBM 2019最佳论文等荣誉。担任国际期刊IEEE/ACM Transactions on Computational Biology and Bioinformatics的编委、计算生物学领域的国际顶级会议ISMB、RECOMB程序委员会委员。
 
 课题组长期致力于人工智能和生命医学的交叉学科研究，未来科研方向围绕**AI for Life Sciences**展开，包括：
 - 高通量实验方法开发、多组学测序方法开发；
